--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -23,3 +23,12 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+pre {
+  background: none;
+  padding: 0;
+}
+
+code.hljs {
+  padding: var(--ifm-pre-padding);
+}
